--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "cote": "^0.16.2",
     "express": "^4.16.3"
   },
+  "scripts": {
+    "start": "node index.js"
+  },
   "devDependencies": {
     "axios": "^0.18.0"
   }
